--- a/templates/ListingsResult.tmpl
+++ b/templates/ListingsResult.tmpl
@@ -1,14 +1,14 @@
 <!-- <a href = "#/listing/<%=listing_id%>"> -->
 	<div class="Listing" style="background-image: url(<%= MainImage.url_fullxfull %>)">
-      <div class="clickSurface" id="<%= listing_id%>"></div>
+      <div class="clickSurface" id="<%= listing_id%>" title="<%= title %>"></div>
       <div class="saleBanner">Sale Item</div>
-   		<span title="<%= title %>"><div class="listingInfoInside" title="<%= title %>">
+   		<span title="<%= title %>"><div class="listingInfoInside">
        		<h5><%= short_title %></h5>
-        	<h6 class="priceDisplay">Only $<%= price %>!</h6>
+        	<h6 class="<%= pButtonState %> priceDiv">Only $<%= price %>!</h6>
     	</div></span>
 	</div>
 	<span title="<%= title %>"><div class="listingInfoOutside" title="<%= title %>">
         <h6><%= short_title %></h6>
-        <h6>Only $<%= price %>!</h6>
+        <h6 class="<%= pButtonState %> priceDiv">Only $<%= price %>!</h6>
 	</div></span>
 <!-- </a> -->
