--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ body > * {
     min-height: 100vh;
     /*background-color: salmon;*/
     background-attachment: fixed;
-    background-image: url('../images/pattern.jpg');
+    background-image: url('../images/patternlow.jpg');
     background-size: cover;
     /*opacity: 0.6;*/
     position: fixed;
@@ -500,6 +500,28 @@ body > * {
 .listingInfoOutside h6 {
     color: rgb(88, 82, 82);
     text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+}
+.scrollToTop {
+    display: block;
+    position: fixed;
+    bottom: 0;
+    right: -13;
+    transform: skew(-15deg) translateX(215px);
+    padding: 0 26px 0 24px;
+    background-color: rgba(70, 64, 64, 0.4);
+    min-height: 1em;
+    min-width: 9em;
+    color: rgb(228, 217, 217);
+    text-shadow: 1px 1px 1px black;
+    border-radius: 8px 0 0 0;
+    border: solid rgba(1, 1, 1, 0.5);
+    border-bottom: 1px;
+    font-size: 1.1em;
+    transition: 0.2s linear;
+}
+.scrollToTop.active {
+    transform: skew(-15deg) translateX(0);
+    transition: 0.2s linear;
 }
 /* ---------------------------- */
 
