--- a/templates/IndividualListing.tmpl
+++ b/templates/IndividualListing.tmpl
@@ -47,3 +47,11 @@
         </a>
     </div>
 </div>
+<div class="disclaimer">
+    <div class="disclaimerButton"><i class="fa fa-caret-up"></i></div>
+    <p>ALL LISTINGS, TITLES, PHOTOS, DESCRIPTIONS, AND<br>
+    ANY INFORMATION SHOWN ARE THE CREATION OF THE SELLER.</p>
+    <p>&nbsp;</p>
+    <p>THEY DO NOT REFLECT THE VIEWS, BELIEFS, <br>
+    OR SPELLING/GRAMMATICAL ABILITY OF THOSE OF US AT AFFLUENTSY.</p>
+</div>
