--- a/css/styles.css
+++ b/css/styles.css
@@ -714,7 +714,7 @@ body > * {
 
 /* ---------------------------- */
 
-.listingBox {
+.individualListingOff {
     display: none;
 }
 .mask {
@@ -744,6 +744,27 @@ body > * {
     color: white;
     z-index: 4;
     padding: 0.5em;
+}
+.randomSpinnerSegment {
+    display: none;
+}
+.randomSpinnerSegment.active {
+    display: block;
+}
+.hoverSpinner {
+    display: block;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 10px;
+    min-height: 10px;
+    border-radius: 10px;
+    border: 15px solid rgb(41, 35, 26);
+    background-color: rgb(243, 234, 223);
+    z-index: 4;
+    padding: 0.5em;
+    box-shadow: inset 0 0 8px rgb(1, 1, 1), 0 0 39px rgba(255, 255, 255, 0.4);
 }
 /* ---------------------------- */
 
@@ -914,6 +935,46 @@ body > * {
     border: 3px solid beige;
     color: black;
     border-radius: 40px;
+}
+.disclaimer {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 80%;
+    transform: translate(-50%, 75%);
+    min-height: 10px;
+    padding: 3em 1em 1em;
+    font-size: 0.6em;
+    text-align: center;
+    color: rgb(240, 234, 226);
+    line-height: 1;
+    background-color: rgb(111, 94, 69);
+    border-radius: 10px 10px 0 0;
+    border: 2px solid rgb(146, 140, 120);
+    border-width: 2px 2px 0 2px;
+    box-shadow: inset 1px -2px 10px rgb(0, 0, 0), 1px -2px 10px rgb(0, 0, 0);
+    transition: 0.25s linear;
+}
+.disclaimer.active {
+    transform: translate(-50%, 0);
+    transition: 0.25s linear;
+}
+.disclaimerButton {
+    display: block;
+    position: absolute;
+    top: -0.8em;
+    left: 50%;
+    transform: translateX(-50%) scale(0.8);
+    min-width: 10px;
+    min-height: 10px;
+    font-size: 2em;
+    color: rgb(61, 42, 15);
+    border: 4px solid rgb(43, 32, 17);
+    padding: 0 1.2em 0.1em;
+    border-radius: 48%;
+    background-color: rgb(184, 171, 128);
+    box-shadow: inset 0px 4px 21px rgba(228, 209, 172, 0.5), inset 0px -2px 21px rgba(0, 0, 0, 0.5), 0 0px 21px rgba(0, 0, 0, 0.5);
 }
 /* ---------------------------- */
 
