--- a/templates/ListingsResult.tmpl
+++ b/templates/ListingsResult.tmpl
@@ -4,11 +4,11 @@
       <div class="saleBannerLocation <%= sBannerState %>">Sale Item</div>
    		<span title="<%= title %>"><div class="listingInfoInside">
        		<h5><%= short_title %></h5>
-        	<h6 class="<%= pButtonState %> priceDiv">Only $<%= price %>!</h6>
+        	<h6 class="<%= pButtonState %> innerPriceDiv">Only $<%= price %>!</h6>
     	</div></span>
 	</div>
 	<span title="<%= title %>"><div class="listingInfoOutside" title="<%= title %>">
         <h6><%= short_title %></h6>
-        <h6 class="<%= pButtonState %> priceDiv">Only $<%= price %>!</h6>
+        <h6 class="<%= pButtonOutsideState %> outerPriceDiv">Only $<%= price %>!</h6>
 	</div></span>
 <!-- </a> -->
