--- a/css/styles.css
+++ b/css/styles.css
@@ -223,10 +223,13 @@ body > * {
     vertical-align: middle;
     text-align: right;
 }
-.topLinks a:hover {
+.aboutLink {
+    margin-bottom: 0;
+}
+.topLinks p:hover {
     color: rgb(223, 205, 183);
 }
-.topLinks a:active {
+.topLinks p:active {
     color: rgb(138, 125, 110);
 }
 .searchBar {
@@ -259,6 +262,7 @@ body > * {
 .contentWrapper {
     background-color: white;
     display: block;
+    position: relative;
 }
 /* ---------------------------- */
 
@@ -544,9 +548,6 @@ body > * {
 /* ---------------------------- */
 
 @media (min-width: 0px) and (max-width: 600px) {
-    .contentBlock.active {
-        padding-left: 0;
-    }
     .title {
         padding: 2.5% 0 2vh 1%;
     }
@@ -1179,5 +1180,47 @@ a img {
     }
     .closeButton {
         right: -12%;
+    }
+}
+/* ---------------------------- */
+
+/*                              */
+
+/*           ABOUT US           */
+
+/*                              */
+
+/* ---------------------------- */
+
+.aboutUs {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 100vh;
+    width: 100%;
+    margin: 0 auto;
+    padding: 40px 1em 0;
+    background-color: tan;
+    transform: scale(1);
+    transition: 0.3s linear;
+
+}
+.aboutUs.active {
+    padding-top: 120px;
+}
+.aboutUsOff {
+    display: none;
+    transform: scale(0);
+    transition: 0.3s linear;
+}
+@media (min-width: 600px) {
+    .aboutUs {
+        padding-left: 20%;
+    }
+}
+@media (min-width: 1100px) {
+    .aboutUs {
+        padding-left: 15%;
     }
 }
